When Everything Was Okay

--- a/index.html
+++ b/index.html
@@ -4,6 +4,141 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Table Of Mondrian</title>
+    <link rel="stylesheet" href="main.css" />
   </head>
-  <body></body>
+  <body>
+    <table class="modrian">
+      <tr>
+        <td rowspan="3" colspan="6" style="background-color: rgb(156, 131, 83)">
+          1
+        </td>
+
+        <td rowspan="3" colspan="9">7</td>
+        <td rowspan="3" colspan="8">16</td>
+
+        <td rowspan="17">24</td>
+      </tr>
+      <tr></tr>
+      <tr></tr>
+      <tr>
+        <td rowspan="6" colspan="3">4</td>
+
+        <td rowspan="12" colspan="12">4</td>
+
+        <td rowspan="6" colspan="8">16</td>
+      </tr>
+      <tr></tr>
+      <tr></tr>
+      <tr></tr>
+      <tr></tr>
+      <tr></tr>
+      <tr>
+        <td rowspan="8" colspan="3">10</td>
+        <td rowspan="6" colspan="4">19</td>
+
+        <td rowspan="6" colspan="4">19</td>
+      </tr>
+      <tr></tr>
+      <tr></tr>
+      <tr></tr>
+      <tr></tr>
+      <tr></tr>
+      <tr>
+        <td rowspan="5" colspan="6">4</td>
+
+        <td rowspan="3" colspan="6">9</td>
+
+        <td>15</td>
+        <td>16</td>
+        <td>17</td>
+        <td>18</td>
+        <td>19</td>
+        <td>20</td>
+        <td>21</td>
+        <td>22</td>
+      </tr>
+      <tr>
+        <td>15</td>
+        <td>16</td>
+        <td>17</td>
+        <td>18</td>
+        <td>19</td>
+        <td>20</td>
+        <td>21</td>
+        <td>22</td>
+      </tr>
+      <tr>
+        <td rowspan="6" colspan="3">18</td>
+
+        <td>16</td>
+        <td>17</td>
+        <td>18</td>
+        <td>19</td>
+        <td>20</td>
+        <td>21</td>
+        <td>22</td>
+        <td>23</td>
+        <td rowspan="6">24</td>
+      </tr>
+      <tr>
+        <td>9</td>
+        <td>10</td>
+        <td>11</td>
+        <td>12</td>
+        <td>13</td>
+        <td>14</td>
+        <td>15</td>
+        <td>16</td>
+        <td>17</td>
+        <td>18</td>
+        <td>19</td>
+        <td>20</td>
+        <td>21</td>
+        <td>22</td>
+      </tr>
+      <tr>
+        <td>9</td>
+        <td>10</td>
+        <td>11</td>
+        <td>12</td>
+        <td>13</td>
+        <td>14</td>
+        <td>15</td>
+        <td>16</td>
+        <td>17</td>
+        <td>18</td>
+        <td>19</td>
+        <td>20</td>
+        <td>21</td>
+        <td>22</td>
+      </tr>
+      <tr>
+        <td rowspan="3" colspan="6">9</td>
+
+        <td rowspan="2" colspan="6">10</td>
+
+        <td>16</td>
+        <td>17</td>
+        <td>18</td>
+        <td>19</td>
+        <td>20</td>
+        <td>21</td>
+        <td>22</td>
+      </tr>
+      <tr>
+        <td>7</td>
+        <td>8</td>
+
+        <td>17</td>
+        <td>18</td>
+        <td>19</td>
+        <td>20</td>
+        <td>21</td>
+        <td>22</td>
+      </tr>
+      <tr>
+        <td colspan="14">10</td>
+      </tr>
+    </table>
+  </body>
 </html>
