add full work index.html

--- a/index.html
+++ b/index.html
@@ -3,29 +3,57 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Table Of Mondrian</title>
+    <title>My Modrian Table</title>
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
     <table class="modrian">
+      <caption>
+        Modrian
+      </caption>
       <tr>
-        <td rowspan="3" colspan="6" style="background-color: rgb(156, 131, 83)">
-          1
+        <td
+          rowspan="3"
+          colspan="6"
+          style="background-color: rgb(194, 174, 136)"
+        >
+          1.1
         </td>
 
-        <td rowspan="3" colspan="9">7</td>
-        <td rowspan="3" colspan="8">16</td>
-
-        <td rowspan="17">24</td>
+        <td
+          rowspan="3"
+          colspan="9"
+          style="background-color: rgb(175, 157, 124)"
+        >
+          1.7
+        </td>
+        <td rowspan="3" colspan="8" style="background-color: rgb(255, 166, 0)">
+          1.16
+        </td>
+        <td rowspan="18" style="background-color: rgb(194, 174, 136)">1.24</td>
       </tr>
       <tr></tr>
       <tr></tr>
       <tr>
-        <td rowspan="6" colspan="3">4</td>
+        <td
+          rowspan="6"
+          colspan="3"
+          style="background-color: rgb(194, 174, 136)"
+        >
+          4.1
+        </td>
 
-        <td rowspan="12" colspan="12">4</td>
+        <td
+          rowspan="12"
+          colspan="12"
+          style="background-color: rgb(224, 10, 10)"
+        >
+          4.4
+        </td>
 
-        <td rowspan="6" colspan="8">16</td>
+        <td rowspan="6" colspan="8" style="background-color: rgb(255, 166, 0)">
+          4.16
+        </td>
       </tr>
       <tr></tr>
       <tr></tr>
@@ -33,10 +61,29 @@
       <tr></tr>
       <tr></tr>
       <tr>
-        <td rowspan="8" colspan="3">10</td>
-        <td rowspan="6" colspan="4">19</td>
+        <td
+          rowspan="9"
+          colspan="3"
+          style="background-color: rgb(194, 174, 136)"
+        >
+          10.1
+        </td>
 
-        <td rowspan="6" colspan="4">19</td>
+        <td
+          rowspan="6"
+          colspan="4"
+          style="background-color: rgb(194, 174, 136)"
+        >
+          10.16
+        </td>
+
+        <td
+          rowspan="6"
+          colspan="4"
+          style="background-color: rgb(194, 174, 136)"
+        >
+          10.20
+        </td>
       </tr>
       <tr></tr>
       <tr></tr>
@@ -44,100 +91,65 @@
       <tr></tr>
       <tr></tr>
       <tr>
-        <td rowspan="5" colspan="6">4</td>
+        <td rowspan="6" colspan="6" style="background-color: rgb(15, 216, 32)">
+          16.4
+        </td>
 
-        <td rowspan="3" colspan="6">9</td>
+        <td
+          rowspan="3"
+          colspan="6"
+          style="background-color: rgb(194, 174, 136)"
+        >
+          16.10
+        </td>
 
-        <td>15</td>
-        <td>16</td>
-        <td>17</td>
-        <td>18</td>
-        <td>19</td>
-        <td>20</td>
-        <td>21</td>
-        <td>22</td>
+        <td
+          rowspan="3"
+          colspan="8"
+          style="background-color: rgb(194, 174, 136)"
+        >
+          16.16
+        </td>
       </tr>
+      <tr></tr>
+      <tr></tr>
       <tr>
-        <td>15</td>
-        <td>16</td>
-        <td>17</td>
-        <td>18</td>
-        <td>19</td>
-        <td>20</td>
-        <td>21</td>
-        <td>22</td>
-      </tr>
-      <tr>
-        <td rowspan="6" colspan="3">18</td>
+        <td rowspan="6" colspan="3" style="background-color: rgb(255, 166, 0)">
+          19.1
+        </td>
 
-        <td>16</td>
-        <td>17</td>
-        <td>18</td>
-        <td>19</td>
-        <td>20</td>
-        <td>21</td>
-        <td>22</td>
-        <td>23</td>
-        <td rowspan="6">24</td>
-      </tr>
-      <tr>
-        <td>9</td>
-        <td>10</td>
-        <td>11</td>
-        <td>12</td>
-        <td>13</td>
-        <td>14</td>
-        <td>15</td>
-        <td>16</td>
-        <td>17</td>
-        <td>18</td>
-        <td>19</td>
-        <td>20</td>
-        <td>21</td>
-        <td>22</td>
-      </tr>
-      <tr>
-        <td>9</td>
-        <td>10</td>
-        <td>11</td>
-        <td>12</td>
-        <td>13</td>
-        <td>14</td>
-        <td>15</td>
-        <td>16</td>
-        <td>17</td>
-        <td>18</td>
-        <td>19</td>
-        <td>20</td>
-        <td>21</td>
-        <td>22</td>
-      </tr>
-      <tr>
-        <td rowspan="3" colspan="6">9</td>
+        <td
+          rowspan="3"
+          colspan="6"
+          style="background-color: rgb(194, 174, 136)"
+        >
+          19.10
+        </td>
 
-        <td rowspan="2" colspan="6">10</td>
+        <td rowspan="5" colspan="8" style="background-color: rgb(54, 17, 221)">
+          19.16
+        </td>
 
-        <td>16</td>
-        <td>17</td>
-        <td>18</td>
-        <td>19</td>
-        <td>20</td>
-        <td>21</td>
-        <td>22</td>
+        <td rowspan="6" style="background-color: rgb(218, 11, 11)">19.24</td>
       </tr>
+      <tr></tr>
+      <tr></tr>
       <tr>
-        <td>7</td>
-        <td>8</td>
+        <td
+          rowspan="3"
+          colspan="6"
+          style="background-color: rgb(194, 174, 136)"
+        >
+          22.4
+        </td>
 
-        <td>17</td>
-        <td>18</td>
-        <td>19</td>
-        <td>20</td>
-        <td>21</td>
-        <td>22</td>
+        <td rowspan="2" colspan="6" style="background-color: rgb(13, 199, 44)">
+          22.10
+        </td>
       </tr>
+      <tr></tr>
       <tr>
-        <td colspan="14">10</td>
+        <td colspan="14" style="background-color: rgb(194, 174, 136)">24.10</td>
       </tr>
     </table>
   </body>
